--- a/readability/css/style.css
+++ b/readability/css/style.css
@@ -125,7 +125,7 @@ h2 {
      display: none;
 }
 
-i {
+main i {
      font-size: 2rem;
      color: rgb(222, 96, 87);
      margin-bottom: 2rem;
@@ -164,38 +164,44 @@ p {
 /* HEADER
 /*******************************************/
 
-ul {
+header ul {
      padding: 0;
      margin: 0;
 }
-a {
+header a {
      text-decoration: none;
 }
-.container {
+header .container {
      width: 80%;
      margin: 5rem auto;
 }
-.containerOutside {
+header.containerOutside {
      padding: 2rem;
 }
-nav {
+header nav {
      display: flex;
      justify-content: space-between;
      align-items: center;
 }
-.containerNav {
+header .containerNav {
      width: 90%;
      margin: 1rem auto 0 auto;
 }
-.socials {
+header .socials {
      display: flex; 
      list-style-type: none;
      gap: 2rem;
 }
-.socials i {
+header .socials i {
      color: rgb(40, 23, 27);
      font-size: 2rem;
 }
-.logo {
+header .logo {
      width: 50%;
+}
+
+@media screen and (max-width: 1000px) {
+     header .containerNav {
+          width: 100%;
+     }
 }
